<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_log_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#ffffff"
    tools:context="pws24.uw.tacoma.edu.recycledpc.LogInActivity">




    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">



        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:id="@+id/regEmail"
                android:hint="@string/register_email_hint"
                android:maxLines="1"
                android:textCursorDrawable="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimaryDark"
                android:layout_marginTop="10dp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/regPassword"
                android:hint="@string/register_password_hint"
                android:maxLines="1"
                android:textCursorDrawable="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimaryDark"
                android:layout_marginTop="10dp"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/firstName"
                android:hint="@string/first_name_hint"
                android:maxLines="1"
                android:textCursorDrawable="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimaryDark"
                android:layout_marginTop="10dp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/lastName"
                android:hint="@string/last_name_hint"
                android:maxLines="1"
                android:textCursorDrawable="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimaryDark"
                android:layout_marginTop="10dp"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_account"
            android:id="@+id/register_account"
            android:layout_marginTop="10dp"
            android:onClick="checkRegisterAccount"
            android:textStyle="bold" />


    </LinearLayout>
</RelativeLayout>
